# RecommandationFilieres

./: Cargo.toml  Rocket.toml  deploy.sh
assets/: index.html
database/: schema.sql
src/: database.rs  main.rs  routes.rs  templates.rs
static/: form.html  index.html  me.html
static/admin/: index.html
templates/: course_type_selection.html  courses_list.html  full_matrix.html  ratings_form.html
