[package]
name = "matrix-completion-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1" }
askama = { version = "0.12.1", features = ["with-rocket"] }
sqlx = { version = "0.8.1", features = ["sqlite", "macros", "runtime-async-std"] }
libmatcompl = { path = "../libmatcompl" }
